# Ollama-Docker-NVIDIA-Toolkit

./: README.md  compose.yml  setup.md
api/: Cargo.toml
api/src/api/: mod.rs
api/src/server/: mod.rs
core/: .gitignore  Cargo.toml  Dockerfile
core/src/: main.rs
core/src/api/: controllers.rs  error.rs  mod.rs  schemas.rs  traits.rs
core/src/app/: mod.rs  traits.rs
core/src/bot/providers/: mod.rs  shimmy.rs  traits.rs
core/src/bot/tools/: current_date.rs  math.rs  mod.rs  whois.rs
core/src/providers/: mod.rs  traits.rs
core/src/server/: mod.rs
ui/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ui/src/: index.tsx
ui/src/app/: App.tsx
ui/src/app/layouts/: Default.tsx
ui/src/app/layouts/elements/: Header.tsx  MobileSidebar.tsx
ui/src/app/services/: ollama.services.ts
ui/src/assets/: index.css
ui/src/types/: responses.ts
