[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
reqwest = "0.13.1"
rig-core = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
